Adding some formatting for class 16 and adding class number 17

--- a/Section 1 - HTML/17. Unordered lists/project.html
+++ b/Section 1 - HTML/17. Unordered lists/project.html
@@ -14,5 +14,12 @@
 		<h2><em>Contacts</em></h2>
 		<p>Site: <u>macht.com.br</u></p><!--Here we have another paragraph-->
 		<p>Phone: 0000 - 0000 <strike>&nbsp;Sorry, phone number not yet available</strike>
+
+		<h2>Products</h2>
+		<ul>
+			<li>Software for Offices</li>
+			<li>Software for supermarkets</li>
+			<li>Software for engineering</li>
+		</ul>
 	</body>
 </html>
