Fixing some errors and adding the class 20: Links

--- a/Section 1 - HTML/15. Paragraphs/project..html
+++ b/Section 1 - HTML/15. Paragraphs/project..html
@@ -1,4 +1,4 @@
-<!DOCTPE html>
+<!DOCTYPE html>
 
 <html>
 	
@@ -9,7 +9,7 @@
 
 	<body>
 		<h2>About the Enterprise</h1>
-		<p>This is an software enterprise M</p> <!-- In this line we have a paragraph-->
+		<p>This is a software enterprise M</p> <!-- In this line we have a paragraph-->
 		<hr/>
 		<h2>Contacts</h2>
 		<p>Site: macht.com.br</p><!--Here we have another paragraph-->
