--- a/Section 1 - HTML/17. Unordered lists/project.html
+++ b/Section 1 - HTML/17. Unordered lists/project.html
@@ -1,4 +1,4 @@
-<!DOCTPE html>
+<!DOCTYPE html>
 
 <html>
 	
@@ -9,7 +9,7 @@
 
 	<body>
 		<h2>About the Enterprise</h1>
-		<p>This is an <strong>software</strong> enterprise called Macht</p> <!-- In this line we have a paragraph-->
+		<p>This is a <strong>software</strong> enterprise called Macht</p> <!-- In this line we have a paragraph-->
 		<hr/>
 		<h2><em>Contacts</em></h2>
 		<p>Site: <u>macht.com.br</u></p><!--Here we have another paragraph-->
