--- a/Section 1 - HTML/27. Final Project/macht-website/contacts.html
+++ b/Section 1 - HTML/27. Final Project/macht-website/contacts.html
@@ -3,28 +3,51 @@
 
 	<head>
 		<title>Contacts</title>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 	</head>
 
 	<body>
 
 	<table border="0" align="center" width="900">
-				<a href="home.html">Home</a>
-			<a href="about.html">About us</a>
-			<a href="">Contacts</a>
-			<a href="products.html">Products</a>
-			<a href="clients.html">Clients</a>
-			<a href="careers.html">Careers</a>
-			<a href="blog.html">Blog</a>
-			<a href="sign-in.html">Sign In</a>
-			
-			<img src="macht.png" width="10px" height="10px"/>
-		</p>
-
-		<h2><em>Contacts</em></h2>
-		<p>Site: <u>macht.com.br</u></p><!--Here we have another paragraph-->
-		<p>Phone: 0000 - 0000 <strike>&nbsp;Sorry, phone number not yet available</strike>
-		<hr/>
+			<tr>
+				<td align="left" >
+					<img src="macht.png" width="20%" height="5%"/>
+				</td>
+				<td align="right" width="500px">
+					<a href="home.html">Home</a>
+					<a href="about.html">About us</a>
+					<a href="">Contacts</a>
+					<a href="products.html">Products</a>
+					<a href="clients.html">Clients</a>
+					<a href="careers.html">Careers</a>
+					<a href="blog.html">Blog</a>
+					<a href="sign-in.html">Sign In</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<h2>
+						<em>
+							Contacts
+						</em>
+					</h2>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					Site: <u>macht.com.br</u>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					Phone: 0000 - 0000 <strike>&nbsp;Sorry, phone number not yet available</strike>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<hr />
+				</td>
+			</tr>
 		</table>
 
 	</body>
