--- a/Section 1 - HTML/27. Final Project/macht-website/products.html
+++ b/Section 1 - HTML/27. Final Project/macht-website/products.html
@@ -4,32 +4,45 @@
 	
 	<head>
 			<title>Products</title>
-			<meta charset="utf-8" />
+			<meta charset="UTF-8" />
 	</head>
 
 	<body>
 
-		
-		<p>
-			<a href="home.html">Home</a>
-			<a href="about.html">About us</a>
-			<a href="contacts.html">Contacts</a>
-			<a href="">Products</a>
-			<a href="clients.html">Clients</a>
-			<a href="careers.html">Careers</a>
-			<a href="blog.html">Blog</a>
-			<a href="sign-in.html">Sign In</a>
-
-			<img src="macht.png" width="10px" height="10px"/>
-		</p>
-				
-		<h2>Products</h2>
-		<ul>
-			<li>Software for Offices</li>
-			<li>Software for Supermarkets</li>
-			<li>Software for Engineering</li>
-		</ul>
-		<hr />
+		<table border="0" width="900" align="center">
+			<tr>
+				<td align="left"><img src="macht.png" width="20%" height="5%" />
+				</td>
+				<td width="500px" align="right">
+				<a href="home.html">Home</a>
+				<a href="about.html">About us</a>
+				<a href="contacts.html">Contacts</a>
+				<a href="">Products</a>
+				<a href="clients.html">Clients</a>
+				<a href="careers.html">Careers</a>
+				<a href="blog.html">Blog</a>
+				<a href="sign-in.html">Sign In</a>
+			</tr>
+			<tr>
+				<td>
+					<h2>Products</h2>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<ul>
+						<li>Software for Offices</li>
+						<li>Software for Supermarkets</li>
+						<li>Software for Engineering</li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<hr />
+				</td>
+			</tr>
+		</table>
 
 	</body>
 
