--- a/Section 1 - HTML/27. Final Project/macht-website/about.html
+++ b/Section 1 - HTML/27. Final Project/macht-website/about.html
@@ -9,7 +9,7 @@
 	<body>
 		<table border="0" width="900" align="center">
 			<tr colspan="2">
-				<td>
+				<td align="left">
 					<img src="macht.png" width="20%" height="5%"/>
 				</td>
 				<td width="500px" align="right">
