--- a/Section 1 - HTML/27. Final Project/macht-website/careers.html
+++ b/Section 1 - HTML/27. Final Project/macht-website/careers.html
@@ -9,44 +9,68 @@
 
 	<body>
 
-		<p>
-			<a href="home.html">Home</a>
-			<a href="about.html">About us</a>
-			<a href="contacts.html">Contacts</a>
-			<a href="products.html">Products</a>
-			<a href="clients.html">Clients</a>
-			<a href="">Careers</a>
-			<a href="blog.html">Blog</a>
-			<a href="sign-in.html">Sign In</a>
-			<img src="macht.png" width="10px" height="10px"/>
-		</p>
-		<h2>Jobs</h2>
-		<p>Are you looking for a job in a great company? Yes? So come to be a machtzer! See the vacancies below:</p>
-
-		<table border="1" width="50%" height="100%">
+		<table border="0" align="center" width="900">
 			<tr>
-				<th>Position</th>
-				<th>Job Description</th>
-				<th>Experience</th>
-				<th>General Knowledges</th>
+				<td aling="left">
+					<img src="macht.png" width="20%" height="5%" />
+				</td>
+				<td align="right" width="500px">
+					<a href="home.html">Home</a>
+					<a href="about.html">About us</a>
+					<a href="contacts.html">Contacts</a>
+					<a href="products.html">Products</a>
+					<a href="clients.html">Clients</a>
+					<a href="">Careers</a>
+					<a href="blog.html">Blog</a>
+					<a href="sign-in.html">Sign In</a>
+				</td>
+			</tr> 
+			<tr>
+				<td>
+					<h2>
+						Jobs
+					</h2>
+				</td>
 			</tr>
 			<tr>
-				<td>Scrum Master</td>
-				<td>Will be a leader in a multi skill team , Scrum Master Certification is required</td>
-				<td>5 years or more</td>
-				<td rowspan="2">Linux, HTTP, REST, XML, Scrum</td>
+				<td colspan="2">
+					Are you looking for a job in a great company? Yes? So come to be a machtzer! See the vacancies below: 
+				</td>
 			</tr>
 			<tr>
-				<td>Java Developer</td>
-				<td>Spring MVC, ANSI SQL, Oracle Database</td>
-				<td>2 years or more</td>
+				<td colspan="2">
+					<br />
+					<table border="1" align="center">
+						<tr>
+							<th>Position</th>
+							<th>Job Description</th>
+							<th>Experience</th>
+							<th>General Knowledges</th>
+						</tr>
+						<tr>
+							<td>Scrum Master</td>
+							<td>Will be a leader in a multi skill team , Scrum Master Certification is required</td>
+							<td>5 years or more</td>
+							<td rowspan="2">Linux, HTTP, REST, XML, Scrum</td>
+						</tr>
+						<tr>
+							<td>Java Developer</td>
+							<td>Spring MVC, ANSI SQL, Oracle Database</td>
+							<td>2 years or more</td>
+						</tr>
+						<tr>
+							<th align="left">Total of Open Vacancies</th>
+							<th colspan="3">2</th>
+						</tr>
+					</table>
+				</td>
 			</tr>
 			<tr>
-				<th align="left">Total of Open Vacancies</th>
-				<th colspan="3">2</th>
+				<td colspan="2">
+					<hr/>
+				</td>
 			</tr>
 		</table>
-		<hr/>
-		
+
 	</body>
 </html>
