Macht website finalized, section finalized

--- a/Section 1 - HTML/27. Final Project/macht-website/careers.html
+++ b/Section 1 - HTML/27. Final Project/macht-website/careers.html
@@ -4,14 +4,14 @@
 	
 	<head>
 			<title>Careers</title>
-			<meta charset="utf-8" />
+			<meta charset="UTF-8" />
 	</head>
 
 	<body>
 
 		<table border="0" align="center" width="900">
 			<tr>
-				<td aling="left">
+				<td align="left">
 					<img src="macht.png" width="20%" height="5%" />
 				</td>
 				<td align="right" width="500px">
