--- a/Section 1 - HTML/27. Final Project/macht-website/register.html
+++ b/Section 1 - HTML/27. Final Project/macht-website/register.html
@@ -4,61 +4,78 @@
 	
 	<head>
 			<title>Register</title>
-			<meta charset="utf-8" />
+			<meta charset="UTF-8" />
 	</head>
 
 	<body>
 
-		<p>
-			<a href="home.html">Home</a>
-			<a href="about.html">About us</a>
-			<a href="contacts.html">Contacts</a>
-			<a href="products.html">Products</a>
-			<a href="clients.html">Clients</a>
-			<a href="careers.html">Careers</a>
-			<a href="blog.html">Blog</a>
-			<a href="sign-in.html">Sign In</a>
+		<table border="0" align="center" width="900">
+			<tr>
+				<td align="left">
+					<img src="macht.png" width="20%" height="5%" />
+				</td>
+				<td align="right" width="500px">
+					<a href="home.html">Home</a>
+					<a href="about.html">About us</a>
+					<a href="contacts.html">Contacts</a>
+					<a href="products.html">Products</a>
+					<a href="clients.html">Clients</a>
+					<a href="careers.html">Careers</a>
+					<a href="blog.html">Blog</a>
+					<a href="sign-in.html">Sign In</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<h1>
+						Register
+					</h1>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<form>
+						E-mail:<br />
+						<input type="text" name="email"/><br /><br />
 			
-			<img src="macht.png" width="10px" height="10px"/>
-		</p>
-		
-		<h1>Register</h1>
-		<form>
-			E-mail:<br />
-			<input type="text" name="email"/><br /><br />
+						Password:<br/>
+						<input type="password" name="password" /><br /><br />
 			
-			Password:<br/>
-			<input type="password" name="password" /><br /><br />
+						Repeat the password:<br />
+						<input type="password" name="password" /><br /><br />
 			
-			Repeat the password:<br />
-			<input type="password" name="password" /><br /><br />
-			
-			Sex:<br />
-			<input type="radio" name="sexo">Male<br />
-			<input type="radio" name="sexo">Female<br /><br />
+						Sex:<br />
+						<input type="radio" name="sexo">Male<br />
+						<input type="radio" name="sexo">Female<br /><br />
 
-			Interested in develop:<br />
-			<input type="checkbox" name="site" />Web site<br />
-			<input type="checkbox" name="app" />App<br />
-			<input type="checkbox" name="system" />System to manage your company<br /><br />
+						Interested in develop:<br />
+						<input type="checkbox" name="site" />Web site<br />
+						<input type="checkbox" name="app" />App<br />
+						<input type="checkbox" name="system" />System to manage your company<br /><br />
 			
-			What is your continent: <br />
-			<select>s
-				<option>America</option>
-				<option>Africa</option>
-				<option>Asia</option>
-				<option>Europe</option>
-				<option>Oceania</option>
-			</select><br /><br />
+						What is your continent: <br />
+						<select>
+							<option>America</option>
+							<option>Africa</option>
+							<option>Asia</option>
+							<option>Europe</option>
+							<option>Oceania</option>
+						</select><br /><br />
 
-			What are you looking for? (describe details)<br />
-			<textarea>
-			</textarea><br /><br />
+						What are you looking for? (describe details)<br />
+							<textarea>
+							</textarea><br /><br />
 
-			<input type="submit" value="Register" />
-		</form>
-		<hr />
-
+						<input type="submit" value="Register" />
+					</form>
+				</td>
+			</tr>
+			<tr>
+				<td  colspan="2">
+					<hr />
+				</td>
+			</tr>
+		</table>
 	
 		
 	</body>
