--- a/Section 1 - HTML/27. Final Project/macht-website/sign-in.html
+++ b/Section 1 - HTML/27. Final Project/macht-website/sign-in.html
@@ -4,35 +4,52 @@
 	
 	<head>
 			<title>Sign in</title>
-			<meta charset="utf-8" />
+			<meta charset="UTF-8" />
 	</head>
 
 	<body>
 
-		<p>
-			<a href="home.html">Home</a>
-			<a href="about.html">About us</a>
-			<a href="contacts.html">Contacts</a>
-			<a href="products.html">Products</a>
-			<a href="clients.html">Clients</a>
-			<a href="careers.html">Careers</a>
-			<a href="blog.html">Blog</a>
-			<a href="">Sign In</a>
-			<img src="macht.png" width="10px" height="10px"/>
-		</p>
-		
-		<h1>Sign in here</h1>
-		<form>
-			E-mail:<br />
-			<input type="text" name="email"/><br />
-			Password:<br/>
-			<input type="password" name="password"/><br /><br />
-			<input type="submit" value="Enter" /><br />
-			<a href="register.html">Are you not registered? Create an account now!</a>
-		</form>
-		<hr />
-
+		<table border="0" align="center" width="900">
+			<tr>
+				<td align="left">
+					<img src="macht.png" width="20%" height="5%"/>
+				</td>
+				<td align="right" width="500px">
+					<a href="home.html">Home</a>
+					<a href="about.html">About us</a>
+					<a href="contacts.html">Contacts</a>
+					<a href="products.html">Products</a>
+					<a href="clients.html">Clients</a>
+					<a href="careers.html">Careers</a>
+					<a href="blog.html">Blog</a>
+					<a href="">Sign In</a>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<h1>
+						Sign in here
+					</h1>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<form >
+						E-mail:<br />
+						<input type="text" name="email"/><br />
+						Password:<br/>
+						<input type="password" name="password"/><br /><br />
+						<input type="submit" value="Enter" /><br />
+						<a href="register.html">Are you not registered? Create an account now!</a>
+					</form>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<hr />
+				</td>
+			</tr>
+		</table>
 	
-		
 	</body>
 </html>
