Creating menus for each section

--- a/Section-1-HTML/index.html
+++ b/Section-1-HTML/index.html
@@ -8,8 +8,19 @@
 
 <body>
 
-	<h1>Menu of the Section</h1>
-	<a href="12-Structure-of-a-webpage/project.html">12: Structure of a webpage</a>
+	<table border="0" width="900" align="center">
+		<tr>
+			<td colspan="2"><h1>Section Menu </h1></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+					<ul>
+						<li><a href="12-Structure-of-a-webpage/project.html">12. Structure of a webpage</a></li>
+						<li><a href="12-Structure-of-a-webpage/project.html">14. Headers</a></li>
+					</ul>
+			</td>
+		</tr>
+	</table>
 
 </body>
 
