--- a/Section-1-HTML/index-html.html
+++ b/Section-1-HTML/index-html.html
@@ -8,15 +8,28 @@
 
 <body>
 
-	<table border="0" width="900" align="center">
+	<table border="0" width="900" align="right">
 		<tr>
 			<td colspan="2"><h1>Section Menu </h1></td>
 		</tr>
 		<tr>
-			<td colspan="2">
+			<td><a href="README-HTML.md">OPEN README</a></td>
+		</tr>
+		<tr>
+			<td colspan="2" >
 					<ul>
-						<li><a href="12-Structure-of-a-webpage/project.html">12. Structure of a webpage</a></li>
-						<li><a href="12-Structure-of-a-webpage/project.html">14. Headers</a></li>
+	 					<li><a href="12-Structure-of-a-webpage/project.html">12. Structure of a webpage</a></li>
+						<li><a href="14-Headers/headers.html">14. Headers</a></li>
+						<li><a href="15-Paragraphs/project..html">15. Paragraphs</a></li>
+						<li><a href="16-Text-formatting/project.html">16. Text Formatting</a></li>
+						<li><a href="17-Unordered-lists/project.html">17. Unordered Lists</a></li>
+						<li><a href="18-Ordered-lists/project.html">18. Ordered Lists</a></li>
+						<li><a href="19-Images/project.html">19. Images</a></li>
+						<li><a href="20-Links/home.html">20. Links</a></li>
+						<li><a href="21-Tables/careers.html">21. Tables</a></li>
+						<li><a href="23-Forms/sign-in.html">23. Forms</a></li>
+						<li><a href="26-Special-characters/blog.html">26. Special Characters</a></li>
+						<li><a href="27-Final-project/index-final-project.html">27. Final Project</a></li>
 					</ul>
 			</td>
 		</tr>
