--- a/Section-2-CSS/32-CSS-Selectors/class-content/inline-css.html
+++ b/Section-2-CSS/32-CSS-Selectors/class-content/inline-css.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Inline CSS</title>
+	<title>My site</title>
 	<meta charset="UTF-8" />
+	<style type="text/css">
+
+	p {
+		color: red;
+		border: 1px solid blue;
+	}
+
+	h1 {
+		font-size: 80px;
+	}
+
+	</style>
 </head>
 <body>
 
 	<h1>CSS Style (Cascading Style Sheet)</h1>
-	<p style="color: red; border: 1px solid red;">
+	<p style="color: blue;">
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit ante, dapibus a ipsum non, iaculis sodales enim. Praesent at rutrum enim. Donec bibendum dolor a ultrices mollis. Morbi eget faucibus diam. Vivamus a felis a tortor tempus commodo ac at arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque et mauris sit amet nisl luctus egestas id non ligula. Donec vehicula tortor non felis sodales ultrices. Nam mollis tortor vel ultrices mattis.
 	</p>
+
+	<p>
+		Etiam finibus vitae ex tempor tempor. Donec lobortis risus ac mi pulvinar, nec auctor nisi vestibulum. In condimentum maximus eros, vitae dignissim urna mollis blandit. Aenean hendrerit posuere purus eleifend luctus. Nulla sagittis lacinia congue. Nulla eget magna lacus. Pellentesque eu quam et quam finibus condimentum. Cras pulvinar maximus nisi aliquet dignissim. Donec placerat mi ac sodales laoreet. Sed luctus mi risus. Quisque quis nunc bibendum, tempus odio in, venenatis velit. Sed sed mauris magna. Nulla vestibulum nisi nisi, nec scelerisque nulla gravida vehicula.
+	</p>
 		
-	<p style="color: red; border: 1px solid red;">
+	<h1>CSS Style (Cascading Style Sheet)</h1>
+	<p style="color: blue;">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit ante, dapibus a ipsum non, iaculis sodales enim. Praesent at rutrum enim. Donec bibendum dolor a ultrices mollis. Morbi eget faucibus diam. Vivamus a felis a tortor tempus commodo ac at arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque et mauris sit amet nisl luctus egestas id non ligula. Donec vehicula tortor non felis sodales ultrices. Nam mollis tortor vel ultrices mattis.
+	</p>
+
+	<p>
 		Etiam finibus vitae ex tempor tempor. Donec lobortis risus ac mi pulvinar, nec auctor nisi vestibulum. In condimentum maximus eros, vitae dignissim urna mollis blandit. Aenean hendrerit posuere purus eleifend luctus. Nulla sagittis lacinia congue. Nulla eget magna lacus. Pellentesque eu quam et quam finibus condimentum. Cras pulvinar maximus nisi aliquet dignissim. Donec placerat mi ac sodales laoreet. Sed luctus mi risus. Quisque quis nunc bibendum, tempus odio in, venenatis velit. Sed sed mauris magna. Nulla vestibulum nisi nisi, nec scelerisque nulla gravida vehicula.
 	</p>
 
