--- a/Section-2-CSS/32-CSS-Selectors/macht-website/home.html
+++ b/Section-2-CSS/32-CSS-Selectors/macht-website/home.html
@@ -5,6 +5,15 @@
 	<head>
 			<title>Home</title>
 			<meta charset="UTF-8" />
+			<style type="text/css">
+
+				h2 {
+					color: blue;
+					border: 1px solid green;
+				}
+
+			
+			</style>
 	</head>
 
 	<body>
@@ -14,7 +23,7 @@
 				<td align="left">
 					<img src="macht.png" width="20%" height="5%"/>
 				</td>
-				<td align="right" width="500px">
+				<td  align="right" width="500px">
 					<a href="">Home</a>
 					<a href="about.html">About us</a>
 					<a href="contacts.html">Contacts</a>
@@ -27,11 +36,11 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<h2 style="color: blue; border: 2px solid green">WELCOME TO MACHT DEVELOPER! WE ARE A SOFTWARE ENTERPRISE</h2>
+					<h2>WELCOME TO MACHT DEVELOPER! WE ARE A SOFTWARE ENTERPRISE</h2>
 				</td>
 			</tr>
 			<tr>
-					<td colspan="2" style="border: 2px solid red">
+					<td colspan="2" style="border: 2px solid blue">
 						We develop any kind of software and IT service that you can imagine!
 					</td>
 			</tr>
