Adding the second part of the class 33: Selectors. Beginning the class 35: Classes and IDs

--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/blog.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/blog.html
@@ -5,23 +5,6 @@
 	<head>
 			<title>Blog</title>
 			<meta charset="UTF-8" />
-			<style type="text/css">
-					h1 {
-							color: blue;
-							border: 1px solid green;
-						}
-
-						h2 {
-							color: blue;
-							border: 1px solid green;
-						}
-
-						p {
-							color: blue;
-							border: 1px solid green;	
-						}
-
-			</style>
 	</head>
 
 	<body>
@@ -65,7 +48,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<table border="1" width="30%" align="center" style="color:blue;>
+					<table border="1" width="30%" align="center">
 						<tr>
 							<th>Char</th>
 							<th>Entity</th>
@@ -142,7 +125,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td style="color: blue; border: 1px solid green;">
+				<td>
 					<b>About the author</b><br />
 					Matheus Oliveira da Silva is a software developer passionate<br />
 					about agile culture, web and mobile ecosystem.<br />
