--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/about.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/about.html
@@ -4,25 +4,6 @@
 	<head>
 		<title>About us</title>
 		<meta charset="UTF-8" />
-		<style type="text/css">
-
-						h2 {
-							color: blue;
-							border: 1px solid green;
-						}
-
-						p {
-							color: blue;
-							border: 1px solid green;
-						}
-
-						img {
-							border: 1px solid green;
-						}
-
-
-			</style>
-
 	</head>
 
 	<body>
@@ -51,7 +32,7 @@
 			</tr>
 			<tr>
 				<td>
-					<p>This is a <strong>software</strong> enterprise called Macht</p>
+					This is a <strong>software</strong> enterprise called Macht
 				</td>
 			</tr>
 			<tr>
@@ -68,7 +49,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<p>The name <strong>MACHT</strong> means <strong>POWER</strong>, <strong>MACHT</strong> is  a german word!</p>
+					The name <strong>MACHT</strong> means <strong>POWER</strong>, <strong>MACHT</strong> is  a german word!
 				</td>
 			</tr>
 			<tr>
