--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/careers.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/careers.html
@@ -5,19 +5,6 @@
 	<head>
 			<title>Careers</title>
 			<meta charset="UTF-8" />
-			<style type="text/css">
-
-						h2 {
-							color: blue;
-							border: 1px solid green;
-						}
-
-						p {
-							color: blue;
-							border: 1px solid green;	
-						}
-
-			</style>
 	</head>
 
 	<body>
@@ -47,13 +34,13 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<p>Are you looking for a job in a great company? Yes? So come to be a machtzer! See the vacancies below: </p>
+					Are you looking for a job in a great company? Yes? So come to be a machtzer! See the vacancies below: 
 				</td>
 			</tr>
 			<tr>
 				<td colspan="2">
 					<br />
-					<table border="1" align="center" style="color: blue; ">
+					<table border="1" align="center">
 						<tr>
 							<th>Position</th>
 							<th>Job Description</th>
