--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/clients.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/clients.html
@@ -5,25 +5,6 @@
 	<head>
 			<title>Clients</title>
 			<meta charset="UTF-8" />
-				<style type="text/css">
-
-						h2 {
-							color: blue;
-							border: 1px solid green;
-						}
-
-						p {
-							color: blue;
-							border: 1px solid green;
-						}
-
-						ol {
-							color: blue;
-							border: 1px solid green;
-						}
-
-
-			</style>
 	</head>
 
 	<body>
@@ -53,7 +34,7 @@
 			</tr>
 			<tr colspan="2">
 				<td>
-					<p>In order of the first until the last client that we worked</p>
+					In order of the first until the last client that we worked
 				</td>
 			</tr>
 			<tr>
