--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/contacts.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/contacts.html
@@ -4,18 +4,6 @@
 	<head>
 		<title>Contacts</title>
 		<meta charset="UTF-8" />
-		<style type="text/css">
-			h2 {
-					color: blue;
-					border: 1px solid green;
-				}
-
-			p {
-							color: blue;
-							border: 1px solid green;
-						}
-
-		</style>
 	</head>
 
 	<body>
@@ -47,12 +35,12 @@
 			</tr>
 			<tr>
 				<td>
-					<p>Site: <u>macht.com.br</u></p>
+					Site: <u>macht.com.br</u>
 				</td>
 			</tr>
 			<tr>
 				<td colspan="2">
-					<p>Phone: 0000 - 0000 <strike>&nbsp;Sorry, phone number not yet available</strike></p>
+					Phone: 0000 - 0000 <strike>&nbsp;Sorry, phone number not yet available</strike>
 				</td>
 			</tr>
 			<tr>
