--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/home.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/home.html
@@ -40,7 +40,7 @@
 				</td>
 			</tr>
 			<tr>
-					<td colspan="2" style="border: 2px solid green">
+					<td colspan="2" style="border: 2px solid blue">
 						We develop any kind of software and IT service that you can imagine!
 					</td>
 			</tr>
