--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/products.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/products.html
@@ -5,20 +5,6 @@
 	<head>
 			<title>Products</title>
 			<meta charset="UTF-8" />
-			<style type="text/css">
-
-				h2 {
-					color: blue;
-					border: 1px solid green;
-					width: 1000px ;
-				}
-
-				ul {
-					color: blue;
-					border: 1px solid green;	
-					font-size: 20px			}
-
-			</style>
 	</head>
 
 	<body>
@@ -38,8 +24,8 @@
 				<a href="sign-in.html">Sign In</a>
 			</tr>
 			<tr>
-				<td colspan="2">
-					<h2 style="font-size:30px">Products</h2>
+				<td>
+					<h2>Products</h2>
 				</td>
 			</tr>
 			<tr>
