--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/sign-in.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/sign-in.html
@@ -5,21 +5,6 @@
 	<head>
 			<title>Sign in</title>
 			<meta charset="UTF-8" />
-			<style type="text/css">
-					h1 {
-						color: blue;
-						border: 1px solid green;
-					}
-
-					form {
-						border: 1px solid green;
-						color: blue;
-						font-weight: bold;
-						font-size: 18px;
-					}
-
-
-			</style>
 	</head>
 
 	<body>
@@ -55,7 +40,7 @@
 						Password:<br/>
 						<input type="password" name="password"/><br /><br />
 						<input type="submit" value="Enter" /><br />
-						<a href="register.html" style="font-size:15px" >Are you not registered? Create an account now!</a>
+						<a href="register.html">Are you not registered? Create an account now!</a>
 					</form>
 				</td>
 			</tr>
