Ending class 35: Classes and IDs

--- a/Section-2-CSS/33-CSS-Selectors/access-here-to-see-the-websites.html
+++ b/Section-2-CSS/33-CSS-Selectors/access-here-to-see-the-websites.html
@@ -4,19 +4,35 @@
 	<head>
 		<title>Inline CSS</title>
 		<meta charset="UTF-8">
+		<style type="text/css">
+			li  {
+				color: red;
+				border: 2px solid green;
+			}
+
+			h1  {
+				color: red;
+				border: 2px solid green;
+			}
+
+			table {
+				border: 2px solid green;	
+			}
+
+		</style>
 	</head>
 
 	<body>
 
 		<table border="0" width="900" align="center">	
 			<tr>
-				<td><h1 style="color: green; border: 2px solid blue;" >Menu of the class 31: Inline CSS</h1></td>
+				<td><h1 style="color: green; border: 2px solid blue;" >Menu of the class 33: CSS Selectors</h1></td>
 			</tr>
 			<tr>
 				<td colspan="2">
 					<ul>
-						<li style="color: red; border: 2px solid green;"><a href="macht-website/home.html">Access the Macht website</a></li>
-						<li style="color: red; border: 2px solid green;" ><a href="class-content/inline-css.html">Access the class content</a></li>
+						<li><a href="macht-website/home.html">Access the Macht website</a></li>
+						<li><a href="class-content/inline-css.html">Access the class content</a></li>
 					</ul>
 				</td>
 			</tr>
