--- a/Section-2-CSS/35-Classes-and-IDs/class-content/inline-css.html
+++ b/Section-2-CSS/35-Classes-and-IDs/class-content/inline-css.html
@@ -10,16 +10,20 @@
 		border: 1px solid blue;
 	}
 
-	h1 {
-		font-size: 80px;
+	.paragraph {
+		color: blue;
+	}
+
+	#green {
+		color: green;
 	}
 
 	</style>
 </head>
 <body>
 
-	<h1>CSS Style (Cascading Style Sheet)</h1>
-	<p style="color: blue;">
+	<h1 id="verde">CSS Style (Cascading Style Sheet)</h1>
+	<p class="paragrafo">
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit ante, dapibus a ipsum non, iaculis sodales enim. Praesent at rutrum enim. Donec bibendum dolor a ultrices mollis. Morbi eget faucibus diam. Vivamus a felis a tortor tempus commodo ac at arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque et mauris sit amet nisl luctus egestas id non ligula. Donec vehicula tortor non felis sodales ultrices. Nam mollis tortor vel ultrices mattis.
 	</p>
 
@@ -28,7 +32,7 @@
 	</p>
 		
 	<h1>CSS Style (Cascading Style Sheet)</h1>
-	<p style="color: blue;">
+	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit ante, dapibus a ipsum non, iaculis sodales enim. Praesent at rutrum enim. Donec bibendum dolor a ultrices mollis. Morbi eget faucibus diam. Vivamus a felis a tortor tempus commodo ac at arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque et mauris sit amet nisl luctus egestas id non ligula. Donec vehicula tortor non felis sodales ultrices. Nam mollis tortor vel ultrices mattis.
 	</p>
 
