--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/clients.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/clients.html
@@ -5,11 +5,37 @@
 	<head>
 			<title>Clients</title>
 			<meta charset="UTF-8" />
+				<style type="text/css">
+						#all-page {
+							border: 1px solid green;
+
+						}
+						.titles {
+							color: blue;
+							border: 1px solid green;
+						}
+
+						.content {
+							color: blue;
+							border: 1px solid green;
+						}
+
+						.dividers {
+							border: 1px solid green;
+						}
+
+						ol {
+							color: blue;
+							border: 1px solid green;
+						}
+
+
+			</style>
 	</head>
 
 	<body>
 
-		<table border="0" align="center" width="900">
+		<table border="0" align="center" width="900" id="all-page">
 			<tr>
 				<td align="left">
 					<img src="macht.png" width="20%" height="5%"/>
@@ -27,14 +53,14 @@
 			</tr>		
 			<tr>
 				<td>
-					<h2>
+					<h2 class="titles">
 						Clients
 					</h2>
 				</td>
 			</tr>
 			<tr colspan="2">
 				<td>
-					In order of the first until the last client that we worked
+					<p class="content">In order of the first until the last client that we worked</p>
 				</td>
 			</tr>
 			<tr>
@@ -47,7 +73,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<hr />
+					<hr  class="dividers"/>
 				</td>
 			</tr>
 		</table>
