--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/careers.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/careers.html
@@ -5,11 +5,31 @@
 	<head>
 			<title>Careers</title>
 			<meta charset="UTF-8" />
+			<style type="text/css">
+
+						#all-page {
+							border: 1px solid green;
+
+						}
+						.titles {
+							color: blue;
+							border: 1px solid green;
+						}
+
+						.content {
+							color: blue;
+							border: 1px solid green;
+						}
+
+						.dividers {
+							border: 1px solid green;
+
+			</style>
 	</head>
 
 	<body>
 
-		<table border="0" align="center" width="900">
+		<table border="0" align="center" width="900" id="all-page">
 			<tr>
 				<td align="left">
 					<img src="macht.png" width="20%" height="5%" />
@@ -27,20 +47,20 @@
 			</tr> 
 			<tr>
 				<td>
-					<h2>
+					<h2 class="titles">
 						Jobs
 					</h2>
 				</td>
 			</tr>
 			<tr>
 				<td colspan="2">
-					Are you looking for a job in a great company? Yes? So come to be a machtzer! See the vacancies below: 
+					<p class="content">Are you looking for a job in a great company? Yes? So come to be a machtzer! See the vacancies below: </p>
 				</td>
 			</tr>
 			<tr>
 				<td colspan="2">
 					<br />
-					<table border="1" align="center">
+					<table border="1" align="center" style="color: blue; ">
 						<tr>
 							<th>Position</th>
 							<th>Job Description</th>
@@ -67,7 +87,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<hr/>
+					<hr class="dividers/>
 				</td>
 			</tr>
 		</table>
