--- a/Section-2-CSS/35-Classes-and-IDs/macht-website/contacts.html
+++ b/Section-2-CSS/35-Classes-and-IDs/macht-website/contacts.html
@@ -4,11 +4,30 @@
 	<head>
 		<title>Contacts</title>
 		<meta charset="UTF-8" />
+		<style type="text/css">
+
+			#all-page {
+				border: 1px solid green;
+			}
+			.titles {
+					color: blue;
+					border: 1px solid green;
+			}
+
+			.contents {
+							color: blue;
+							border: 1px solid green;
+			}
+			.dividers {
+				border: 1px solid green;
+			}
+
+		</style>
 	</head>
 
 	<body>
 
-	<table border="0" align="center" width="900">
+	<table border="0" align="center" width="900" id="all-page">
 			<tr>
 				<td align="left" >
 					<img src="macht.png" width="20%" height="5%"/>
@@ -26,7 +45,7 @@
 			</tr>
 			<tr>
 				<td>
-					<h2>
+					<h2 class="titles">
 						<em>
 							Contacts
 						</em>
@@ -35,17 +54,17 @@
 			</tr>
 			<tr>
 				<td>
-					Site: <u>macht.com.br</u>
+					<p class="contents">Site: <u>macht.com.br</u></p>
 				</td>
 			</tr>
 			<tr>
 				<td colspan="2">
-					Phone: 0000 - 0000 <strike>&nbsp;Sorry, phone number not yet available</strike>
+					<p class="contents">Phone: 0000 - 0000 <strike>&nbsp;Sorry, phone number not yet available</strike></p>
 				</td>
 			</tr>
 			<tr>
 				<td colspan="2">
-					<hr />
+					<hr class="dividers"/>
 				</td>
 			</tr>
 		</table>
