Fixing the name of the class content in href

--- a/Section-2-CSS/38-Div-Span/index-inline-class.html
+++ b/Section-2-CSS/38-Div-Span/index-inline-class.html
@@ -32,7 +32,7 @@
 			<tr>
 				<td colspan="2">
 					<ul>
-						<li class="itens-lista"><a href="class-content/inline-css.html">Access the class content</a></li>
+						<li class="itens-lista"><a href="class-content/span-div.html">Access the class content</a></li>
 					</ul>
 				</td>
 			</tr>
