Fixing the div tags

--- a/Section-5-CSS3/85-box-sizing-rounded-corners/border-box-radius.html
+++ b/Section-5-CSS3/85-box-sizing-rounded-corners/border-box-radius.html
@@ -12,12 +12,12 @@
 
 	<body>
 
-		<dir id="box">
+		<div id="box">
 		<h1>Title 1</h1>
 		<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras velit tellus, mollis at turpis a, vehicula maximus nulla. Donec sit amet eros sollicitudin enim ultricies 
 		 </p>
-	</dir>
+	</div>
 
 
 	</body>
