--- a/Section-5-CSS3/89-shadows/shadows.html
+++ b/Section-5-CSS3/89-shadows/shadows.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<meta charset="utf-8" />
-		<title>Box sizing and rounded corners</title>
+		<title>Shadows</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<meta charset="utf-8" />
