--- a/section-3-html/17-unordered-lists/project.html
+++ b/section-3-html/17-unordered-lists/project.html
@@ -9,7 +9,13 @@
 	</head>
 
 	<body>
-		My first page
+		<h1>Site map</h1>
+		<ul>
+			<li>Home</li>
+			<li>About us</li>
+			<li>Contact</li>
+		</ul>
+
 	</body>
 	
 </html>
