Adding class 21: tables final

--- a/section-3-html/21-tables/project.html
+++ b/section-3-html/21-tables/project.html
@@ -11,19 +11,33 @@
 	<body>
 		<h1>Products</h1>
 
-		<table border="1">
+		<table border="1" width="100%">
 			<tr>
 				<th>Cod</th>
 				<th>Product</th>				
+				<th>Preço</th>					
 			</tr>
 			<tr>
 				<td>00000000120</td>
 				<td>Laptop</td>
+				<td>$1200</td>				
 			</tr>
 			<tr>
 				<td>00000000130</td>
 				<td>Ipad</td>
+				<td>$ 500</td>				
 			</tr>
+			<tr>
+				<td colspan="2">Total</td>
+				<td>$ 1700</td>
+			</tr>
+			<tr>
+				<td rowspan="2">Discount</td>
+				<td>Voucher1: -$10</td>
+			</tr>
+			<tr>
+				<td>Voucher2: -$12</td>
+			</tr>			
 			
 		</table>
 
